# DearDiary

./: .gitignore  README.md  TODO.md.template  install.sh  uninstall.sh
app/: README.md  package.json
app/src/: index.html  main.js  style.css
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
claude/: CLAUDE.md
claude/challenge/: SKILL.md
claude/deardiary-fixer/: SKILL.md
claude/decision-logger/: SKILL.md
claude/emerge/: SKILL.md
claude/graduate/: SKILL.md
claude/idea-evaluator/: SKILL.md
claude/learning-finnish/: SKILL.md
claude/recap/: SKILL.md
claude/vault-health/: SKILL.md
launchd/: com.deardiary.maintain.plist.template  com.deardiary.process.plist.template
scripts/: diary-maintain.sh  diary-process.sh  todo-presenterm.sh  todo-session-start.sh  todo-slides.sh  todo-update.sh
scripts/lib/: diary-maintain-prompt.txt  diary-prompt.txt  prompt.txt
shell/: deardiary-aliases.sh  housekeeping-aliases.sh
tests/: lib.sh  run.sh  test_challenge_skill.sh  test_claude_rules.sh  test_deardiary_fixer_skill.sh  test_decision_logger_skill.sh  test_diary_lock.sh  test_diary_maintain.sh  test_diary_process.sh  test_emerge_skill.sh  test_golden.sh  test_graduate_skill.sh  test_idea_evaluator_skill.sh  test_learning_finnish_skill.sh  test_lock.sh  test_malformed.sh  test_recap_skill.sh  test_session_start.sh  test_throttle.sh  test_vault_health_skill.sh
tests/fixtures/: fake-claude-garbage.txt  fake-claude-output.md  todo-before.md  todo-golden.md  transcript.jsonl
(+4 files in other folders)
